pkg/deps/testdata/ub/manifest/invalid/bad-floor.ub
manifest: {
  requires: {
    'github.com/x/y': 'latest'
  }
}
